Fix layout centering

--- a/Simulator/index.html
+++ b/Simulator/index.html
@@ -226,14 +226,14 @@ Questions?  >>  Aheadflank.ai@gmail.com
     });
   })();
 </script>
-    <main class="d-flex align-items-start main-content position-relative">
+    <main class="d-flex main-content position-relative">
         <!-- Left Pane: Vertical Button Bar -->
         <section id="left-pane">
             <section id="logo">
                 Maneuver <br/>
                 <span>Beta</span>
             </section>
-            <nav id="button-bar" class="d-flex flex-column align-items-bottom gap-2 justify-content-end">
+            <nav id="button-bar" class="d-flex flex-column gap-2">
                 <!-- Help Button -->
                 <button id="btn-help" class="control-btn unselected p-2" data-tooltip="Show Instructions">HELP</button>
                 <span class="w-100 border-top border-secondary"></span>
