--- a/Simulator/index.html
+++ b/Simulator/index.html
@@ -229,11 +229,12 @@ Questions?  >>  Aheadflank.ai@gmail.com
     <main class="d-flex main-content position-relative">
         <!-- Left Pane: Vertical Button Bar -->
         <section id="left-pane">
-            <section id="logo">
-                Maneuver <br/>
-                <span>Beta</span>
-            </section>
-            <nav id="button-bar" class="d-flex flex-column gap-2">
+            <div id="left-inner" class="d-flex flex-column">
+                <section id="logo">
+                    Maneuver <br/>
+                    <span>Beta</span>
+                </section>
+                <nav id="button-bar" class="d-flex flex-column gap-2">
                 <!-- Help Button -->
                 <button id="btn-help" class="control-btn unselected p-2" data-tooltip="Show Instructions">HELP</button>
                 <span class="w-100 border-top border-secondary"></span>
@@ -277,6 +278,7 @@ Questions?  >>  Aheadflank.ai@gmail.com
                 <!-- Button Group 3 -->
                 <button id="btn-range" class="control-btn selected" data-tooltip="Toggle Radar Range (3, 6, 12, 24 nm)">12.0</button>
             </nav>
+            </div>
         </section>
 
 	    <section id="simulator">
